--- a/Portofolio Ali Munif/index.html
+++ b/Portofolio Ali Munif/index.html
@@ -299,7 +299,7 @@
                 <label for="pesan" class="form-label">Pesan :</label>
                 <textarea class="form-control" id="pesan" rows="3" placeholder="Coming soon" disabled ></textarea>
               </div>
-              <button type="submit" class="kunjungi btn btn-primary">Kirim</button>
+              <a href="https://wa.me/+6285842344849?text=Assalamualaikum%20Ali%2C%20(keperluan)" target="_blank" class="kunjungi btn btn-primary">Hubungi saya</a>
             </form>
           </div>
         </div>
