--- a/Portofolio Ali Munif/index.html
+++ b/Portofolio Ali Munif/index.html
@@ -13,18 +13,20 @@
     <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
+    <!-- AOS CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- Murni CSS -->
     <link rel="stylesheet" href="style.css" />
     <title>Portofolio | Ali Munif</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="img/favicon.png" />
   </head>
-
 
   <body id="home">
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow-sm sticky-top" style="background-color: #6499e9">
       <div class="container">
-        <img src="img/favicon.png" alt="Logo" width="40" height="35" class="d-inline-block align-text-top">
+        <img src="img/favicon.png" alt="Logo" width="40" height="35" class="d-inline-block align-text-top" />
         <a class="navbar-brand ms-3" href="#"><b>Ali Munif Adi Wijaya</b></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -54,11 +56,15 @@
 
     <!-- JUMBOTRON -->
     <section class="ali jumbotron text-center">
-      <img src="img/fotoku.png" alt="Ali Munif" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Ali Munif Adi Wijaya</h1>
-      <p class="lead">Siswa Jurusan Teknik Komputer & Jaringan dengan minat Full Stack Developer.</p>
-      
-      <div class="Icons">
+      <div class="aos" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
+        <img src="img/fotoku.png" alt="Ali Munif" width="200" class="rounded-circle img-thumbnail" />
+      </div>
+      <div class="aos" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
+        <h1 class="display-4">Ali Munif Adi Wijaya</h1>
+        <p class="lead">Siswa Jurusan Teknik Komputer & Jaringan dengan minat Full Stack Developer.</p>
+      </div>
+
+      <div class="Icons" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
         <a href="https://instagram.com/_alimunif?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><i class="bi bi-instagram text-black p-4"></i></a>
         <a href="https://www.facebook.com/profile.php?id=100066732151767&mibextid=LQQJ4d" target="_blank"><i class="bi bi-facebook text-black p-4"></i></a>
         <a href="https://www.tiktok.com/@_alimunif?_t=8gKy3dlDbbG&_r=1" target="_blank"><i class="bi bi-tiktok text-black p-4"></i></a>
@@ -78,18 +84,18 @@
     <section id="tentang">
       <div class="container" style="background-color: #9eddff">
         <div class="row text-center mb-3">
-          <div class="col">
+          <div class="col" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
             <h2>Tentang Saya</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
             <p>
               Saya adalah seorang pelajar yang bersemangat di SMKN 3 Yogyakarta dengan minat utama sebagai seorang Full Stack Developer. Saya telah mengembangkan keterampilan dan pengetahuan dalam berbagai bahasa pemrograman untuk mencapai
               tujuan karir saya.
             </p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300">
             <p>
               Selama bersekolah di SMKN 3 Yogyakarta, saya cukup aktif dalam beberapa organisasi seperti OSIS, ROHIS, dan TONTI. Dengan mengikuti organisasi tersebut, saya mendapatkan manfaat untuk belajar berkolaborasi, berkomunikasi,
               memenejemen waktu dengan baik.
@@ -111,35 +117,45 @@
     <section id="proyek">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col">
+          <div class="col" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
             <h2>Proyek Saya</h2>
           </div>
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/1.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
                 <h5 class="card-title">Website Portofolio</h5>
                 <p class="card-text">Website portofolio ini berisi tentang data diri dari seseorang yang bernama Ali Munif Adi Wijaya.</p>
-                <a href="#" target="_blank" class=" kunjungi btn btn-primary">Kunjungi</a>
+                <a href="#" target="_blank" class="kunjungi btn btn-primary">Kunjungi</a>
               </div>
             </div>
           </div>
 
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+            <div class="card">
+              <img src="proyek/susulan1.png" class="card-img-top" alt="Proyek" />
+              <div class="card-body">
+                <h5 class="card-title">Website Landing Page</h5>
+                <p class="card-text">Website Landing Page ini menyediakan jasa berupa layanan hosting.</p>
+                <a href="https://alihosting.vercel.app/" target="_blank" class="kunjungi btn btn-primary">Kunjungi</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/2.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
                 <h5 class="card-title">Website e-Commerce</h5>
-                <p class="card-text">Website e-Commerce ini menjual fashion dari beberapa brand ternama</p>
-                <a href="#" target="_blank" class="kunjungi btn btn-primary disabled" >COMING SOON</a>
+                <p class="card-text">Website e-Commerce ini menjual fashion dari beberapa brand ternama.</p>
+                <a href="#" target="_blank" class="kunjungi btn btn-primary disabled">COMING SOON</a>
               </div>
             </div>
           </div>
 
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/3.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -150,7 +166,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/4.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -161,7 +177,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/5.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -172,7 +188,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/6.jpg" height="235" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -199,13 +215,13 @@
     <section id="sertifikat">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col">
+          <div class="col" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
             <h2>Sertifikat Saya</h2>
           </div>
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="sertifikat/1.png" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
@@ -216,7 +232,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="sertifikat/2.png" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
@@ -227,7 +243,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="sertifikat/3.png" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
@@ -238,7 +254,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="sertifikat/4.png" height="285" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
@@ -249,7 +265,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4">
+          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="sertifikat/5.jpg" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
@@ -277,17 +293,17 @@
     <section id="kontak">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col">
+          <div class="col" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
             <h2>Kontak Saya</h2>
           </div>
         </div>
 
-        <div class="row justify-content-center">
+        <div class="row justify-content-center" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
           <div class="col-md-6">
             <form>
               <div class="mb-3">
                 <label for="nama" class="form-label">Nama lengkap :</label>
-                <input type="text" class="form-control" id="nama" aria-describedby="nama" placeholder="Coming soon" disabled/>
+                <input type="text" class="form-control" id="nama" aria-describedby="nama" placeholder="Coming soon" disabled />
               </div>
 
               <div class="mb-3">
@@ -297,7 +313,7 @@
 
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan :</label>
-                <textarea class="form-control" id="pesan" rows="3" placeholder="Coming soon" disabled ></textarea>
+                <textarea class="form-control" id="pesan" rows="3" placeholder="Coming soon" disabled></textarea>
               </div>
               <a href="https://wa.me/+6285842344849?text=Assalamualaikum%20Ali%2C%20(keperluan)" target="_blank" class="kunjungi btn btn-primary">Hubungi saya</a>
             </form>
@@ -320,5 +336,11 @@
       <p>Created with <i class="bi bi-arrow-through-heart-fill text-danger"></i> by <a href="#" class="textali text-black fw-bold">Ali Munif</a></p>
     </footer>
     <!-- AKHIR FOOTER -->
+
+    <!-- JAVASCRIPT AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
