--- a/Portofolio Ali Munif/index.html
+++ b/Portofolio Ali Munif/index.html
@@ -144,6 +144,18 @@
               </div>
             </div>
           </div>
+
+          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+            <div class="card">
+              <img src="proyek/susulan2.png" class="card-img-top" alt="Proyek" />
+              <div class="card-body">
+                <h5 class="card-title">Website Pribadi MAHAFIDZ</h5>
+                <p class="card-text">Website pribadi ini berisi tentang M. Abdurrohman Alhafidz </p>
+                <a href="https://portofolio-mahafidz.vercel.app/" target="_blank" class="kunjungi btn btn-primary">Kunjungi</a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/2.png" class="card-img-top" alt="Proyek" />
