--- a/Portofolio Ali Munif/index.html
+++ b/Portofolio Ali Munif/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- GOOGLE VERIFICATION -->
+    <meta name="google-site-verification" content="mMPY90vckVmwkmKUL7nLOxQ1ndju4dIGvM1vcOS0yRw" />
+
+    <!-- SEO -->
+    <meta name="title" content="Ali Munif | Portofolio" />
+    <meta name="description" content="Saya adalah seorang pelajar yang bersemangat di SMK Negeri 3 Yogyakarta dengan minat utama sebagai seorang Web Developer." />
+    <meta name="keywords" content="Ali Munif, SMK Negeri 3 Yogyakarta, Web Developer" />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="author" content="Ali Munif Adi Wijaya" />
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 
@@ -150,7 +161,7 @@
               <img src="proyek/susulan2.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
                 <h5 class="card-title">Website Pribadi MAHAFIDZ</h5>
-                <p class="card-text">Website pribadi ini berisi tentang M. Abdurrohman Alhafidz </p>
+                <p class="card-text">Website pribadi ini berisi tentang M. Abdurrohman Alhafidz</p>
                 <a href="https://portofolio-mahafidz.vercel.app/" target="_blank" class="kunjungi btn btn-primary">Kunjungi</a>
               </div>
             </div>
