--- a/Portofolio Ali Munif/index.html
+++ b/Portofolio Ali Munif/index.html
@@ -72,7 +72,7 @@
       </div>
       <div class="aos" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
         <h1 class="display-4">Ali Munif Adi Wijaya</h1>
-        <p class="lead">Siswa Jurusan Teknik Komputer & Jaringan dengan minat Full Stack Developer.</p>
+        <p class="lead">Siswa Jurusan Teknik Komputer & Jaringan dengan minat Web Developer.</p>
       </div>
 
       <div class="Icons" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
