--- a/Portofolio Ali Munif/index.html
+++ b/Portofolio Ali Munif/index.html
@@ -102,8 +102,8 @@
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
             <p>
-              Saya adalah seorang pelajar yang bersemangat di SMKN 3 Yogyakarta dengan minat utama sebagai seorang Full Stack Developer. Saya telah mengembangkan keterampilan dan pengetahuan dalam berbagai bahasa pemrograman untuk mencapai
-              tujuan karir saya.
+              Saya adalah seorang pelajar yang bersemangat di SMKN 3 Yogyakarta dengan minat utama sebagai seorang Web Developer. Saya telah mengembangkan keterampilan dan pengetahuan dalam berbagai bahasa pemrograman untuk mencapai tujuan
+              karir saya.
             </p>
           </div>
           <div class="col-md-4" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300">
