--- a/Portofolio Ali Munif/index.html
+++ b/Portofolio Ali Munif/index.html
@@ -70,12 +70,12 @@
       <div class="aos" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
         <img src="img/fotoku.png" alt="Ali Munif" width="200" class="rounded-circle img-thumbnail" />
       </div>
-      <div class="aos" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
+      <div class="aos mt-5" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
         <h1 class="display-4">Ali Munif Adi Wijaya</h1>
         <p class="lead">Siswa Jurusan Teknik Komputer & Jaringan dengan minat Web Developer.</p>
       </div>
 
-      <div class="Icons" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+      <div class="Icons fs-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
         <a href="https://instagram.com/_alimunif?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><i class="bi bi-instagram text-black p-4"></i></a>
         <a href="https://www.facebook.com/profile.php?id=100066732151767&mibextid=LQQJ4d" target="_blank"><i class="bi bi-facebook text-black p-4"></i></a>
         <a href="https://www.tiktok.com/@_alimunif?_t=8gKy3dlDbbG&_r=1" target="_blank"><i class="bi bi-tiktok text-black p-4"></i></a>
@@ -100,13 +100,13 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
             <p>
               Saya adalah seorang pelajar yang bersemangat di SMKN 3 Yogyakarta dengan minat utama sebagai seorang Web Developer. Saya telah mengembangkan keterampilan dan pengetahuan dalam berbagai bahasa pemrograman untuk mencapai tujuan
               karir saya.
             </p>
           </div>
-          <div class="col-md-4" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300">
             <p>
               Selama bersekolah di SMKN 3 Yogyakarta, saya cukup aktif dalam beberapa organisasi seperti OSIS, ROHIS, dan TONTI. Dengan mengikuti organisasi tersebut, saya mendapatkan manfaat untuk belajar berkolaborasi, berkomunikasi,
               memenejemen waktu dengan baik.
@@ -134,7 +134,7 @@
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/1.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -145,7 +145,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/susulan1.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -156,7 +156,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/susulan2.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -167,7 +167,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/2.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -178,7 +178,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/3.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -189,7 +189,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/4.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -200,7 +200,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/5.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -211,7 +211,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="proyek/6.jpg" height="235" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -244,7 +244,7 @@
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="sertifikat/1.png" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
@@ -255,7 +255,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="sertifikat/2.png" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
@@ -266,7 +266,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="sertifikat/3.png" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
@@ -277,7 +277,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="sertifikat/4.png" height="285" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
@@ -288,7 +288,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
             <div class="card">
               <img src="sertifikat/5.jpg" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
