--- a/Portofolio Ali Munif/index.html
+++ b/Portofolio Ali Munif/index.html
@@ -35,7 +35,7 @@
 
   <body id="home">
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm sticky-top" style="background-color: #6499e9">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm sticky-top pt-3 pb-3" style="background-color: #6499e9">
       <div class="container">
         <img src="img/favicon.png" alt="Logo" width="40" height="35" class="d-inline-block align-text-top" />
         <a class="navbar-brand ms-3" href="#"><b>Ali Munif Adi Wijaya</b></a>
@@ -100,13 +100,13 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-lg-4" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
             <p>
               Saya adalah seorang pelajar yang bersemangat di SMKN 3 Yogyakarta dengan minat utama sebagai seorang Web Developer. Saya telah mengembangkan keterampilan dan pengetahuan dalam berbagai bahasa pemrograman untuk mencapai tujuan
               karir saya.
             </p>
           </div>
-          <div class="col-lg-4" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
             <p>
               Selama bersekolah di SMKN 3 Yogyakarta, saya cukup aktif dalam beberapa organisasi seperti OSIS, ROHIS, dan TONTI. Dengan mengikuti organisasi tersebut, saya mendapatkan manfaat untuk belajar berkolaborasi, berkomunikasi,
               memenejemen waktu dengan baik.
