--- a/Portofolio Ali Munif/index.html
+++ b/Portofolio Ali Munif/index.html
@@ -35,7 +35,7 @@
 
   <body id="home">
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm sticky-top pt-3 pb-3" style="background-color: #6499e9">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm sticky-top pt-3 pb-3 nav-underline" style="background-color: #6499e9">
       <div class="container">
         <img src="img/favicon.png" alt="Logo" width="40" height="35" class="d-inline-block align-text-top" />
         <a class="navbar-brand ms-3" href="#"><b>Ali Munif Adi Wijaya</b></a>
@@ -45,19 +45,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home"><b>Home</b></a>
+              <a class="nav-link text-navbar" aria-current="page" href="#home"><b>Home</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#tentang"><b>Tentang</b></a>
+              <a class="nav-link text-navbar" href="#tentang"><b>Tentang</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#proyek"><b>Proyek</b></a>
+              <a class="nav-link text-navbar" href="#proyek"><b>Proyek</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#sertifikat"><b>Sertifikat</b></a>
+              <a class="nav-link text-navbar" href="#sertifikat"><b>Sertifikat</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#kontak"><b>Kontak</b></a>
+              <a class="nav-link text-navbar" href="#kontak"><b>Kontak</b></a>
             </li>
           </ul>
         </div>
@@ -67,15 +67,15 @@
 
     <!-- JUMBOTRON -->
     <section class="ali jumbotron text-center">
-      <div class="aos" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
-        <img src="img/fotoku.png" alt="Ali Munif" width="200" class="rounded-circle img-thumbnail" />
+      <div class="aos" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="150">
+        <img src="img/fotoku.jpeg" alt="Ali Munif" width="200" class="rounded-circle img-thumbnail" />
       </div>
-      <div class="aos mt-5" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
+      <div class="aos mt-5" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="150">
         <h1 class="display-4">Ali Munif Adi Wijaya</h1>
-        <p class="lead">Siswa Jurusan Teknik Komputer & Jaringan dengan minat Web Developer.</p>
+        <p class="lead">Siswa Jurusan Teknik Komputer Jaringan dengan minat Software Engineer & Web Developer.</p>
       </div>
 
-      <div class="Icons fs-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+      <div class="Icons fs-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="150">
         <a href="https://instagram.com/_alimunif?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><i class="bi bi-instagram text-black p-4"></i></a>
         <a href="https://www.facebook.com/profile.php?id=100066732151767&mibextid=LQQJ4d" target="_blank"><i class="bi bi-facebook text-black p-4"></i></a>
         <a href="https://www.tiktok.com/@_alimunif?_t=8gKy3dlDbbG&_r=1" target="_blank"><i class="bi bi-tiktok text-black p-4"></i></a>
@@ -95,18 +95,18 @@
     <section id="tentang">
       <div class="container" style="background-color: #9eddff">
         <div class="row text-center mb-3">
-          <div class="col" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="150">
             <h2>Tentang Saya</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-lg-4" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="150">
             <p>
-              Saya adalah seorang pelajar yang bersemangat di SMKN 3 Yogyakarta dengan minat utama sebagai seorang Web Developer. Saya telah mengembangkan keterampilan dan pengetahuan dalam berbagai bahasa pemrograman untuk mencapai tujuan
-              karir saya.
+              Saya adalah seorang pelajar yang bersemangat di SMKN 3 Yogyakarta dengan minat utama sebagai seorang Software Engineer & Web Developer. Saya telah mengembangkan keterampilan dan pengetahuan dalam berbagai bahasa pemrograman
+              untuk mencapai tujuan karir saya.
             </p>
           </div>
-          <div class="col-lg-4" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="150">
             <p>
               Selama bersekolah di SMKN 3 Yogyakarta, saya cukup aktif dalam beberapa organisasi seperti OSIS, ROHIS, dan TONTI. Dengan mengikuti organisasi tersebut, saya mendapatkan manfaat untuk belajar berkolaborasi, berkomunikasi,
               memenejemen waktu dengan baik.
@@ -128,13 +128,13 @@
     <section id="proyek">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="150">
             <h2>Proyek Saya</h2>
           </div>
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="150">
             <div class="card">
               <img src="proyek/1.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -145,7 +145,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="150">
             <div class="card">
               <img src="proyek/susulan1.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -156,18 +156,18 @@
             </div>
           </div>
 
-          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="150">
             <div class="card">
               <img src="proyek/susulan2.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
                 <h5 class="card-title">Website Pribadi MAHAFIDZ</h5>
-                <p class="card-text">Website pribadi ini berisi tentang M. Abdurrohman Alhafidz</p>
+                <p class="card-text">Website pribadi ini berisi tentang M. Abdurrohman Alhafidz.</p>
                 <a href="https://portofolio-mahafidz.vercel.app/" target="_blank" class="kunjungi btn btn-primary">Kunjungi</a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="150">
             <div class="card">
               <img src="proyek/2.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -178,7 +178,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="150">
             <div class="card">
               <img src="proyek/3.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -189,7 +189,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="150">
             <div class="card">
               <img src="proyek/4.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -200,7 +200,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="150">
             <div class="card">
               <img src="proyek/5.png" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -211,7 +211,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="150">
             <div class="card">
               <img src="proyek/6.jpg" height="235" class="card-img-top" alt="Proyek" />
               <div class="card-body">
@@ -238,13 +238,13 @@
     <section id="sertifikat">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="150">
             <h2>Sertifikat Saya</h2>
           </div>
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="150">
             <div class="card">
               <img src="sertifikat/1.png" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
@@ -255,7 +255,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="150">
             <div class="card">
               <img src="sertifikat/2.png" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
@@ -266,7 +266,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="150">
             <div class="card">
               <img src="sertifikat/3.png" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
@@ -277,7 +277,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="150">
             <div class="card">
               <img src="sertifikat/4.png" height="285" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
@@ -288,7 +288,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col-lg-4 mb-4" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="150">
             <div class="card">
               <img src="sertifikat/5.jpg" class="card-img-top" alt="Sertifikat" />
               <div class="card-body">
@@ -316,29 +316,39 @@
     <section id="kontak">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
+          <div class="col" data-aos="fade-down" data-aos-duration="1500" data-aos-delay="150">
             <h2>Kontak Saya</h2>
           </div>
         </div>
 
-        <div class="row justify-content-center" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
+        <div class="row justify-content-center" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="150">
           <div class="col-md-6">
-            <form>
+            <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+              <strong>Terima kasih!</strong> Pesan Anda sudah saya terima.
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+
+            <form name="ali-contact-form">
               <div class="mb-3">
                 <label for="nama" class="form-label">Nama lengkap :</label>
-                <input type="text" class="form-control" id="nama" aria-describedby="nama" placeholder="Coming soon" disabled />
+                <input type="text" class="form-control" id="nama" aria-describedby="nama" name="nama" />
               </div>
 
               <div class="mb-3">
                 <label for="email" class="form-label">Email :</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Coming soon" disabled />
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
               </div>
 
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan :</label>
-                <textarea class="form-control" id="pesan" rows="3" placeholder="Coming soon" disabled></textarea>
+                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
               </div>
-              <a href="https://wa.me/+6285842344849?text=Assalamualaikum%20Ali%2C%20(keperluan)" target="_blank" class="kunjungi btn btn-primary">Hubungi saya</a>
+              <button type="submit" class="kirim btn btn-primary btn-kirim">Kirim</button>
+
+              <button class="loading btn btn-primary btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                <span role="status">Loading...</span>
+              </button>
             </form>
           </div>
         </div>
@@ -364,6 +374,35 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
+    </script>
+
+    <script>
+      const scriptURL = "https://script.google.com/macros/s/AKfycbxVh5e5FJQ-Ze69Gnh8IwXa6mAHcrfhuxwzOP-KQAHrEGUoY-LxCaZOu2CQHOABTbGq/exec";
+      const form = document.forms["ali-contact-form"];
+      const btnKirim = document.querySelector(".btn-kirim");
+      const btnLoading = document.querySelector(".btn-loading");
+      const myAlert = document.querySelector(".my-alert");
+
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+
+        // Ketika tombol kirim diklik, maka tampilkan tombol loading dan hilangkan tombol kirim
+        btnLoading.classList.toggle("d-none");
+        btnKirim.classList.toggle("d-none");
+
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            // tampilkan tombol kirim dan hilangkan tombol loading
+            btnLoading.classList.toggle("d-none");
+            btnKirim.classList.toggle("d-none");
+            // tampilkan alert
+            myAlert.classList.toggle("d-none");
+            // reset formnya
+            form.reset();
+            console.log("Success!", response);
+          })
+          .catch((error) => console.error("Error!", error.message));
+      });
     </script>
   </body>
 </html>
